FAQ - accordion collapse issues
last changes - 12/9/20

--- a/FAQ/faq.html
+++ b/FAQ/faq.html
@@ -74,21 +74,22 @@
         </p>
 
         <h2>FAQ</h2><br>
+        <p>Press the Question to see the Answer</p>
 
         <!-- FAQ Accordion -->
         <div class="accordion md-accordion accordion-1" id="accordionEx23" role="tablist">
 
             <!-- 1st Question -->
             <div class="card">
-                <div class="card-header z-depth-1" role="tab" id="heading96" style=" background: #8cbf3f;">
+                <div class="card-header z-depth-1" role="tab" id="heading30" style=" background: #8cbf3f;">
                     <h5 class="text-uppercase mb-0 py-1">
-                        <a class="font-weight-bold" style=" color: white" data-toggle="collapse" href="#collapse96"
-                            aria-expanded="true" aria-controls="collapse96">
+                        <a class="font-weight-bold" style=" color: white" data-toggle="collapse" href="#collapse30"
+                            aria-expanded="true" aria-controls="collapse30">
                             <i class="fab fa-quora"></i>: How much does it cost to go to Mardi Gras?
                         </a>
                     </h5>
                 </div>
-                <div id="collapse96" class="collapse show" role="tabpanel" aria-labelledby="heading96"
+                <div id="collapse30" class="collapse show" role="tabpanel" aria-labelledby="heading30"
                     data-parent="#accordionEx23">
                     <div class="card-body">
                         <div class="row my-1">
@@ -106,15 +107,15 @@
 
             <!-- 2nd Question -->
             <div class="card">
-                <div class="card-header z-depth-1" role="tab" id="heading97" style="background: #9453a6;">
+                <div class="card-header z-depth-1" role="tab" id="heading31" style="background: #9453a6;">
                     <h5 class="text-uppercase mb-0 py-1">
                         <a class="collapsed font-weight-bold" style=" color: white" data-toggle="collapse"
-                            href="#collapse97" aria-expanded="false" aria-controls="collapse97">
+                            href="#collapse31" aria-expanded="false" aria-controls="collapse31">
                             <i class="fab fa-quora"></i>: Are Carnival and Mardi Gras the same thing?
                         </a>
                     </h5>
                 </div>
-                <div id="collapse97" class="collapse" role="tabpanel" aria-labelledby="heading97"
+                <div id="collapse31" class="collapse" role="tabpanel" aria-labelledby="heading31"
                     data-parent="#accordionEx23">
                     <div class="card-body">
                         <div class="row my-1">
@@ -139,15 +140,15 @@
 
             <!-- 3rd Question -->
             <div class="card">
-                <div class="card-header z-depth-1" role="tab" id="heading98" style=" background: #bea84e;">
+                <div class="card-header z-depth-1" role="tab" id="heading32" style=" background: #bea84e;">
                     <h5 class="text-uppercase mb-0 py-1">
-                        <a class="font-weight-bold" style=" color: white" data-toggle="collapse" href="#collapse98"
-                            aria-expanded="false" aria-controls="collapse98">
+                        <a class="font-weight-bold" style=" color: white" data-toggle="collapse" href="#collapse32"
+                            aria-expanded="false" aria-controls="collapse32">
                             <i class="fab fa-quora"></i>: When was the first Mardi Gras?
                         </a>
                     </h5>
                 </div>
-                <div id="collapse98" class="collapse" role="tabpanel" aria-labelledby="heading98"
+                <div id="collapse32" class="collapse" role="tabpanel" aria-labelledby="heading32"
                     data-parent="#accordionEx23">
                     <div class="card-body">
                         <div class="row my-1">
@@ -166,16 +167,16 @@
 
             <!-- 4th Question -->
             <div class="card">
-                <div class="card-header z-depth-1" role="tab" id="heading96" style=" background: #8cbf3f;">
+                <div class="card-header z-depth-1" role="tab" id="heading33" style=" background: #8cbf3f;">
                     <h5 class="text-uppercase mb-0 py-1">
-                        <a class="font-weight-bold" style=" color: white" data-toggle="collapse" href="#collapse99"
-                            aria-expanded="false" aria-controls="collapse99">
+                        <a class="font-weight-bold" style=" color: white" data-toggle="collapse" href="#collapse33"
+                            aria-expanded="false" aria-controls="collapse33">
                             <i class="fab fa-quora"></i>: What is the significance of the Mardi Gras colors, and
                             where did they come from?
                         </a>
                     </h5>
                 </div>
-                <div id="collapse99" class="collapse" role="tabpanel" aria-labelledby="heading99"
+                <div id="collapse33" class="collapse" role="tabpanel" aria-labelledby="heading33"
                     data-parent="#accordionEx23">
                     <div class="card-body">
                         <div class="row my-1">
@@ -192,15 +193,15 @@
 
             <!-- 5th Question -->
             <div class="card">
-                <div class="card-header z-depth-1" role="tab" id="heading96" style=" background: #9453a6;">
+                <div class="card-header z-depth-1" role="tab" id="heading34" style=" background: #9453a6;">
                     <h5 class="text-uppercase mb-0 py-1">
-                        <a class="font-weight-bold" style=" color: white" data-toggle="collapse" href="#collapse99"
-                            aria-expanded="false" aria-controls="collapse99">
+                        <a class="font-weight-bold" style=" color: white" data-toggle="collapse" href="#collapse34"
+                            aria-expanded="false" aria-controls="collapse34">
                             <i class="fab fa-quora"></i>: Who organizes and pays for Mardi Gras?
                         </a>
                     </h5>
                 </div>
-                <div id="collapse99" class="collapse" role="tabpanel" aria-labelledby="heading99"
+                <div id="collapse34" class="collapse" role="tabpanel" aria-labelledby="heading34"
                     data-parent="#accordionEx23">
                     <div class="card-body">
                         <div class="row my-1">
@@ -223,15 +224,15 @@
 
             <!-- 6th Question -->
             <div class="card">
-                <div class="card-header z-depth-1" role="tab" id="heading96" style=" background: #bea84e;">
+                <div class="card-header z-depth-1" role="tab" id="heading35" style=" background: #bea84e;">
                     <h5 class="text-uppercase mb-0 py-1">
-                        <a class="font-weight-bold" style=" color: white" data-toggle="collapse" href="#collapse99"
-                            aria-expanded="false" aria-controls="collapse99">
+                        <a class="font-weight-bold" style=" color: white" data-toggle="collapse" href="#collapse35"
+                            aria-expanded="false" aria-controls="collapse35">
                             <i class="fab fa-quora"></i>: How is the City government involved?
                         </a>
                     </h5>
                 </div>
-                <div id="collapse99" class="collapse" role="tabpanel" aria-labelledby="heading99"
+                <div id="collapse35" class="collapse" role="tabpanel" aria-labelledby="heading35"
                     data-parent="#accordionEx23">
                     <div class="card-body">
                         <div class="row my-1">
@@ -248,15 +249,15 @@
 
             <!-- 7th Question -->
             <div class="card">
-                <div class="card-header z-depth-1" role="tab" id="heading96" style=" background: #8cbf3f;">
+                <div class="card-header z-depth-1" role="tab" id="heading36" style=" background: #8cbf3f;">
                     <h5 class="text-uppercase mb-0 py-1">
-                        <a class="font-weight-bold" style=" color: white" data-toggle="collapse" href="#collapse99"
-                            aria-expanded="false" aria-controls="collapse99">
+                        <a class="font-weight-bold" style=" color: white" data-toggle="collapse" href="#collapse36"
+                            aria-expanded="false" aria-controls="collapse36">
                             <i class="fab fa-quora"></i>: Who first broadcast Mardi Gras LIVE on the Internet?
                         </a>
                     </h5>
                 </div>
-                <div id="collapse99" class="collapse" role="tabpanel" aria-labelledby="heading99"
+                <div id="collapse36" class="collapse" role="tabpanel" aria-labelledby="heading36"
                     data-parent="#accordionEx23">
                     <div class="card-body">
                         <div class="row my-1">
@@ -280,15 +281,15 @@
 
             <!-- 8th Question -->
             <div class="card">
-                <div class="card-header z-depth-1" role="tab" id="heading96" style=" background: #9453a6;">
+                <div class="card-header z-depth-1" role="tab" id="heading37" style=" background: #9453a6;">
                     <h5 class="text-uppercase mb-0 py-1">
-                        <a class="font-weight-bold" style=" color: white" data-toggle="collapse" href="#collapse99"
-                            aria-expanded="false" aria-controls="collapse99">
+                        <a class="font-weight-bold" style=" color: white" data-toggle="collapse" href="#collapse37"
+                            aria-expanded="false" aria-controls="collapse37">
                             <i class="fab fa-quora"></i>: Why are masks worn?
                         </a>
                     </h5>
                 </div>
-                <div id="collapse99" class="collapse" role="tabpanel" aria-labelledby="heading99"
+                <div id="collapse37" class="collapse" role="tabpanel" aria-labelledby="heading37"
                     data-parent="#accordionEx23">
                     <div class="card-body">
                         <div class="row my-1">
@@ -304,15 +305,15 @@
 
             <!-- 9th Question -->
             <div class="card">
-                <div class="card-header z-depth-1" role="tab" id="heading96" style=" background: #bea84e;">
+                <div class="card-header z-depth-1" role="tab" id="heading38" style=" background: #bea84e;">
                     <h5 class="text-uppercase mb-0 py-1">
-                        <a class="font-weight-bold" style=" color: white" data-toggle="collapse" href="#collapse99"
-                            aria-expanded="false" aria-controls="collapse99">
+                        <a class="font-weight-bold" style=" color: white" data-toggle="collapse" href="#collapse38"
+                            aria-expanded="false" aria-controls="collapse38">
                             <i class="fab fa-quora"></i>: How is a king chosen?
                         </a>
                     </h5>
                 </div>
-                <div id="collapse99" class="collapse" role="tabpanel" aria-labelledby="heading99"
+                <div id="collapse38" class="collapse" role="tabpanel" aria-labelledby="heading38"
                     data-parent="#accordionEx23">
                     <div class="card-body">
                         <div class="row my-1">
