--- a/index.html
+++ b/index.html
@@ -215,19 +215,20 @@
               without
               the expense of joining a big krewe. The best of the best groups like to do it up big. Big costumes, big
               color,
-              big hair, big glitter. Watch for these great groups on the parade route:</p> <br>
-            <div class="card img-fluid indexCenterImg" style="width:500px;">
+              big hair, big glitter. Watch for these great groups on the parade route:</p>
+            <div class="card indexCenterImg">
               <img class="card-img" src="./imgs/clubsGall/clubs1.webp" alt="Clubs-1st-Image">
             </div>
             <p><span style="font-weight: bold;">
-                <br>
+
                 Alter Egos Steppers –</span> The Alter Egos first paraded in 2017. They
               are
               famous for purple wigs and for doing
               good
               things for the community.
-              <br><br>
-              <span style="font-weight: bold;">Amazons –</span> To represent a certain “ferocity of spirit and soul,”
+              <br>
+              <span style="font-weight: bold;"> <br>
+                Amazons –</span> To represent a certain “ferocity of spirit and soul,”
               the
               Amazons, some of whom are cancer
               survivors, don’t smile on their parade route. They don warrior tunics and breast armor, and, along with
@@ -244,7 +245,7 @@
               Arthur,
               Krewe of Druids, Knights of Babylon and Krewe of Iris parades.
             </p>
-            <div class="card img-fluid" style="width:500px;">
+            <div class="card indexCenterImg">
               <img class="card-img" src="./imgs/clubsGall/clubs2.jfif" alt="Clubs-2nd-Image">
             </div>
           </div>
