--- a/media/media.html
+++ b/media/media.html
@@ -70,13 +70,13 @@
             <div class="row">
                 <div class="navbar">
                     <div class="navbarLeft">
-                        <a href="../index.html" class="navbarBtn from-center homeNav active">
+                        <a href="../index.html" class="navbarBtn from-center homeNav">
                             Home
                         </a>
                         <a href="../about/about.html" class="navbarBtn from-center regularNav">
                             About
                         </a>
-                        <a href="../media/media.html" class="navbarBtn from-center regularNav">
+                        <a href="../media/media.html" class="navbarBtn from-center regularNav active">
                             Media
                         </a>
                     </div>
